--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -1,3 +1,7 @@
+.footer-ar-align{
+    direction: rtl;
+}
+
 .footer-widget .pay-with {
     width: 100%;
 }
